# cpp_traits

./: .gitignore  README.md  macro_map.hpp  ppnarg.hpp  traits.hpp
example/: CMakeLists.txt  benchmark.cpp  benchmark_domain.hpp  benchmark_impl.cpp  build.cmd  build.sh  compile_flags.txt  example0.cpp  example1_base.cpp  example2_get_ptr.cpp  example3_shared_ptr.cpp  main.cpp
